<resources>
    <string name="app_name">QurioApp</string>
    <string name="back_arrow_icon">back arrow icon</string>
    <string name="ic_setting_icon">setting icon</string>
    <string name="ic_welcome_qurio_explorer">Welcome Qurio explorer</string>
    <string name="character_image">character image</string>
    <string name="keep_it_up">KEEP IT UP!</string>
    <string name="fire_image">fire_image</string>
    <string name="day_fire">day fire</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="onboarding">Onboarding</string>
    <string name="question">Question</string>
    <string name="rika">Rika</string>
    <string name="check_icon">Check Icon</string>
    <string name="lock_icon">lock icon</string>
    <string name="coins_icon">coins icon</string>
    <string name="_30k">30k</string>
    <string name="game_img">game img</string>
    <string name="play_now">Play Now</string>
    <string name="start_game">Start Game</string>
    <string name="card_background">card background</string>
    <string name="coin_stack">coin stack</string>
    <string name="star">star</string>
    <string name="clock">clock</string>
    <string name="reward">reward</string>
    <string name="correct">Correct</string>
    <string name="great_job">Great Job</string>
    <string name="games">Games</string>
    <string name="last_games">Last Games</string>
    <string name="game_result">Game Result</string>
    <string name="incorrect">Incorrect</string>
    <string name="skipped">Skipped</string>
    <string name="you_lose">You Lose</string>
    <string name="game">Game</string>
    <string name="loading_game">Loading Game</string>
    <string name="_0_sec">0 Sec</string>
    <string name="no_connection">No Connection</string>
    <string name="offline_error">Oops! It looks like you’re offline. Please check your internet connection to continue playing</string>
    <string name="retry">Retry</string>
    <string name="loading_game">Loading Game</string>
    <string name="welcome_to_qurio">Welcome to Qurio</string>
    <string name="welcome_to_the_world_of_qurio_where_questions_spark_curiosity_and_prizes_await_the_smartest_ready_to_begin_the_challenge">Welcome to the world of Qurio, where questions spark curiosity and prizes await the smartest. Ready to begin the challenge?</string>
    <string name="choose_your_character">Choose your character</string>
    <string name="choose_your_charachter_description">Each hero has their own unique style! Choose from unique characters and start your adventure in your own style.</string>
    <string name="challenge_and_win">Challenge and win</string>
    <string name="challenge_And_wind_description">Answer quickly, earn points, and share with your friends! Each trivia category is a new experience.</string>
    <string name="collect_them_all">Collect them all!</string>
    <string name="collect_them_all_description">Unlock characters, earn badges, and climb the leaderboards. Qurio is merciless, but you can handle it.</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="swipe_up_to_play">Swipe up to PLAY!</string>
    <string name="collect_them_all_description_img">collect_them_all_description_img</string>
    <string name="choose_your_character_img">choose_your_character_img</string>
    <string name="left_arrow">left arrow</string>
    <string name="righ_arrow">righ arrow</string>
    <string name="coins_stack_icon">Coins stack icon</string>
    <string name="you_got_a_star">You got a star!</string>
    <string name="start_right_icon">start right icon</string>
    <string name="start_left_icon">start left icon</string>
    <string name="lives">lives</string>
    <string name="points">Points</string>
    <string name="awards">Awards</string>
    <string name="music">Music</string>
    <string name="food_drink"><![CDATA[Food & Drink]]></string>
    <string name="geography">Geography</string>
    <string name="science">Science</string>
    <string name="society_culture"><![CDATA[Society & Culture]]></string>
    <string name="sport_leisure"><![CDATA[Sport & Leisure]]></string>
    <string name="history">History</string>
    <string name="film_tv"><![CDATA[Film & TV]]></string>
    <string name="arts_literature"><![CDATA[Arts & Literature]]></string>
    <string name="general_knowledge">General Knowledge</string>
    <string name="character">Character</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="character_age">Age: 12 Sunblooms</string>
    <string name="character_description">Nature’s little explorer! Rika talks to mushrooms and swears squirrels give her battle advice. Always ready for an adventure.</string>
    <string name="buy">Buy</string>
    <string name="buy_character">Buy Character</string>
    <string name="equal_sign">=</string>
    <string name="_300_x">300 X</string>
    <string name="buy_life">Buy life</string>
    <string name="_1">1</string>
    <string name="_200_x">200 X</string>
    <string name="title">title</string>
    <string name="achievements">Achievements</string>
    <string name="close_shape">close shape</string>
    <string name="explorer">Explorer</string>
    <string name="you_love_experimenting_and_discovering_you_ve_tried_several_categories_and_aren_t_limited_to_just_none_how_to_get_play_in_at_least_4_different_categories">You love experimenting and discovering! You\'ve tried several categories and aren\'t limited to just \none.\nhow to get:\nPlay in at least 4 different categories.</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="click_on_achievement_to_view_details">*Click on achievement to view details</string>
    <string name="achievement_name">Achievement Name</string>
    <string name="achievement_image">achievement image</string>
    <string name="close">Close</string>
    <string name="sound_setting">Sound</string>
    <string name="save_changes">Save changes</string>
    <string name="discard">Discard</string>
    <string name="settings_dialog">Settings</string>
    <string name="share">Share disappointment with friends</string>
    <string name="play_again">play again</string>
    <string name="back_to_home">Back to home</string>
</resources>