<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/characterImage"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/character_image"
        android:src="@drawable/profile_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/check_icon"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="-8dp"
        android:contentDescription="@string/check_icon"
        android:src="@drawable/check"
        app:layout_constraintEnd_toStartOf="@+id/characterImage"
        app:layout_constraintTop_toTopOf="@+id/characterImage" />

    <TextView
        android:id="@+id/characterName"
        style="@style/Label.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/rika"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="@+id/characterImage"
        app:layout_constraintStart_toStartOf="@+id/characterImage"
        app:layout_constraintTop_toBottomOf="@+id/characterImage" />

</androidx.constraintlayout.widget.ConstraintLayout>